--- a/trashmap.html
+++ b/trashmap.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/adjustments.css">
 
     <!-- JS -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCiWJGftXWabPAMlDciNS-8zkDaAXaUMS0"></script>
+<!--    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCiWJGftXWabPAMlDciNS-8zkDaAXaUMS0"></script>-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/fancybox/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="vendor/fancybox/helpers/jquery.fancybox-buttons.js"></script>
@@ -44,9 +44,11 @@
       <a href="http://www.trashout.ngo" target="_blank" class="logo">
         <img src="assets/images/logo.png" alt="TrashOut" title="TrashOut">
       </a>
-      <div id="filter-button"></div>
+      <div id="filter-button" class="hide"></div>
       <form action="#" method="get" id="trash-map-filter-form"><div id="trash-map-filter"></div></form>
-      <div id="map"></div>
+      <div id="map">
+        <div id="init"></div>
+      </div>
       <div class="spinner hide"><div class="rect1"></div><div class="rect2"></div><div class="rect3"></div><div class="rect4"></div><div class="rect5"></div></div>
     </div>
 
